--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.10",
+    "@angular/animations": "^5.2.11",
     "@angular/cdk": "^5.2.5",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
@@ -20,10 +20,11 @@
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
     "@angular/material": "^5.2.5",
-    "@angular/platform-browser": "^5.2.0",
+    "@angular/platform-browser": "^5.2.11",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "angular": "^1.6.10",
+    "angular-blockies": "^1.1.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
@@ -31,8 +32,7 @@
     "rxjs": "^6.1.0",
     "rxjs-compat": "^6.1.0",
     "web3": "^0.18.4",
-    "zone.js": "^0.8.19",
-    "angular-blockies": "^1.1.0"
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.0",
