--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "deploy": "node ./node_modules/vue-gh-pages/index.js"
+    "deploy": "GHPAGES=1 node ./node_modules/vue-gh-pages/index.js"
   },
   "homepage": "https://github.com/eugenioclrc/rcn-loans",
   "wst": "/dist/",
